# f1-strategy-sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.railway  LICENSE  README.md  deploy.sh  docker-compose.yml  nixpacks.toml  pyproject.toml  railway-simple.toml  railway.json  railway.toml  render.yaml  start.sh  start_server.py
configs/: default.yaml
examples/: basic_prediction.py  bulk_ingestion.py  feature_analysis.py
src/f1sim/: __init__.py  cli.py  config.py
src/f1sim/features/: __init__.py  builder.py
src/f1sim/ingest/: __init__.py  fastf1_adapter.py
src/f1sim/models/: __init__.py  advanced.py  baseline.py  ensemble.py  feature_selection.py  hyperparameter_tuning.py
src/f1sim/storage/: __init__.py  repository.py
tests/: test_models.py
web/backend/: main.py  requirements.txt
web/frontend/: .eslintrc.js  build.sh  env.example  package.json  vercel.json
web/frontend/public/: index.html
web/frontend/src/: App.css  App.js  config.js  index.css
web/frontend/src/components/: ApiTest.js  Dashboard.js  ErrorBoundary.js  LiveRace.js  ModelInfo.js  Predictions.js
