[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-strategy-sim"
version = "1.0.0"
description = "A comprehensive Formula 1 race prediction system using machine learning"
authors = [{ name = "Waqas Ahmed", email = "waqas@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["formula1", "f1", "machine-learning", "prediction", "racing", "sports-analytics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
	"pandas>=2.2",
	"numpy>=1.26",
	"scikit-learn>=1.4",
	"xgboost>=2.0",
	"catboost>=1.2",
	"fastf1>=3.3",
	"typer>=0.12",
	"rich>=13.7",
	"pydantic>=2.7",
	"pyyaml>=6.0",
	"orjson>=3.10",
	"sqlalchemy>=2.0",
	"duckdb>=1.0",
	"pyarrow>=15",
	"joblib>=1.4"
]

[project.optional-dependencies]
dev = [
	"ipykernel",
	"jupyter",
	"black",
	"isort",
	"ruff",
	"pytest",
	"pytest-cov",
	"mypy",
	"pre-commit"
]
docs = [
	"sphinx",
	"sphinx-rtd-theme",
	"myst-parser"
]

[project.scripts]
f1sim = "f1sim.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 